--- a/src/main/resources/static/expPbCmgOnf.html
+++ b/src/main/resources/static/expPbCmgOnf.html
@@ -502,6 +502,13 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
+        /* Mini-CSS for pagination */
+        .pagination button{
+            background:none;border:1px solid var(--border-color);
+            padding:4px 8px;border-radius:5px;cursor:pointer;
+        }
+        .pagination button:hover{background:rgba(0,0,0,.05);}
+
         /* --- Responsive Design --- */
         @media (max-width: 1200px) {
             .main-content {
@@ -810,8 +817,8 @@
                 <input type="time" id="hSortie" required>
             </div>
             <div class="form-group">
-                <label for="transporteur">Transporteur</label>
-                <input type="text" id="transporteur" placeholder="Nom du transporteur" required>
+                <label for="transporteurSelect">Transporteur</label>
+                <select id="transporteurSelect" required></select>
             </div>
             <div class="form-group">
                 <label for="numeroBL">N° BL</label>
@@ -834,12 +841,12 @@
                 <input type="text" id="numeroContenaire" placeholder="Numéro du contenaire" required>
             </div>
             <div class="form-group">
-                <label for="poste">Poste</label>
-                <input type="number" id="poste" placeholder="Poste (1, 2 ou 3)" min="1" max="3" required>
+                <label for="posteSelect">Poste</label>
+                <select id="posteSelect" required></select>
             </div>
             <div class="form-group">
-                <label for="lieuDeDechargement">Lieu de déchargement</label>
-                <input type="text" id="lieuDeDechargement" placeholder="Ex: Port de Safi" required>
+                <label for="lieuSelect">Lieu de déchargement</label>
+                <select id="lieuSelect" required></select>
             </div>
             <div class="form-group" style="grid-column: span 2;">
                 <label for="observation">Observation</label>
@@ -856,6 +863,17 @@
             <h2>Historique des Expéditions</h2>
             <div class="section-actions">
                 <button onclick="exportExcel()"><i class="fas fa-file-excel"></i> Exporter Excel</button>
+            </div>
+        </div>
+        <div class="section-tools" style="display:flex;align-items:center;gap:20px;margin-bottom:15px">
+            <label>Mois :
+                <input type="month" id="monthFilter">
+            </label>
+
+            <div class="pagination" style="margin-left:auto;display:flex;align-items:center;gap:10px">
+                <button id="prevPage">«</button>
+                <span id="pageInfo">1/1</span>
+                <button id="nextPage">»</button>
             </div>
         </div>
         <div class="table-responsive">
@@ -884,6 +902,11 @@
     </div>
 </div>
 <script>
+    const REF_API        = '/api/refs';
+    const ROWS_PER_PAGE  = 10;
+    let currentPage = 1;
+    let fullData    = [];   // toutes les lignes reçues
+    let tableData   = [];   // données après filtrage mois
     let currentEditId = null;
 
     // A utility function to show messages, consistent with other pages
@@ -896,6 +919,80 @@
         setTimeout(()=> div.remove(), 4000);
     }
 
+    async function loadRefs() {
+        try {
+            const res = await fetch(REF_API);
+            if (!res.ok) throw new Error(`HTTP ${res.status}`);
+            const refs = await res.json(); // {transporteurs:[], postes:[], lieuxDeDechargement:[]}
+
+            fillSelect('transporteurSelect', refs.transporteurs || []);
+            fillSelect('posteSelect',        refs.postes        || []);
+            fillSelect('lieuSelect',         refs.lieuxDeDechargement || []);
+        } catch (e) {
+            console.error('Erreur chargement refs', e);
+        }
+    }
+
+    function fillSelect(id, arr){
+        document.getElementById(id).innerHTML =
+            arr.map(v=>`<option value="${v}">${v}</option>`).join('');
+    }
+
+    document.getElementById('monthFilter').addEventListener('change', () => {
+        const mois = document.getElementById('monthFilter').value;   // "2025-07"
+        tableData  = mois ? fullData.filter(d=>d.date.startsWith(mois)) : [...fullData];
+        currentPage = 1;
+        renderTable();
+    });
+
+    document.getElementById('prevPage').onclick = () => {
+        if (currentPage > 1){ currentPage--; renderTable(); }
+    };
+    document.getElementById('nextPage').onclick = () => {
+        if (currentPage < Math.ceil(tableData.length/ROWS_PER_PAGE)){
+            currentPage++; renderTable();
+        }
+    };
+
+    function renderTable(){
+        const tbody = document.getElementById('data-body');
+        tbody.innerHTML = '';
+
+        const start = (currentPage-1)*ROWS_PER_PAGE;
+        const slice = tableData.slice(start, start+ROWS_PER_PAGE);
+
+        if (!slice.length){
+            tbody.innerHTML = `<tr><td colspan="14" style="text-align:center;">Aucune donnée</td></tr>`;
+        } else {
+            slice.forEach(e=>{
+                const tnH = (parseFloat(e.tb)-parseFloat(e.tare)).toFixed(2);
+                const tr = document.createElement('tr');
+                tr.innerHTML = `
+            <td>${e.date||''}</td>
+            <td>${e.hEntree||''}</td>
+            <td>${e.hSortie||''}</td>
+            <td>${e.transporteur||''}</td>
+            <td>${e.numeroBL||''}</td>
+            <td>${e.matricule||''}</td>
+            <td>${e.tb??''}</td>
+            <td>${e.tare??''}</td>
+            <td>${tnH}</td>
+            <td>${e.numeroContenaire||''}</td>
+            <td>${e.poste??''}</td>
+            <td>${e.lieuDeDechargement||''}</td>
+            <td>${e.observation||''}</td>
+            <td class="table-actions">
+              <button onclick='editRow(${JSON.stringify(e)})'><i class="fas fa-edit"></i> </button>
+              <button class="delete-btn" onclick='deleteRow("${e.id}")'><i class="fas fa-trash-alt"></i> </button>
+            </td>`;
+                tbody.appendChild(tr);
+            });
+        }
+
+        document.getElementById('pageInfo').textContent =
+            `${currentPage}/${Math.max(1,Math.ceil(tableData.length/ROWS_PER_PAGE))}`;
+    }
+
     function loadTable() {
         fetch('/api/exp-pb-cmg-onf')
             .then(res => {
@@ -905,44 +1002,9 @@
                 return res.json();
             })
             .then(data => {
-                const tbody = document.getElementById('data-body');
-                tbody.innerHTML = ''; // Clear existing rows
-                // Sort data by date in descending order
-                data.sort((a, b) => new Date(b.date) - new Date(a.date));
-
-                if (!Array.isArray(data) || data.length === 0) {
-                    const noDataRow = document.createElement('tr');
-                    noDataRow.innerHTML = `<td colspan="14" style="text-align: center;">Aucune donnée trouvée.</td>`;
-                    tbody.appendChild(noDataRow);
-                    return;
-                }
-
-                data.forEach(e => {
-                    // Calculate TNH on the client-side for display, assuming it's TB - TARE
-                    const tnH = (parseFloat(e.tb) - parseFloat(e.tare)).toFixed(2);
-
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                            <td>${e.date || ''}</td>
-                            <td>${e.hEntree || ''}</td>
-                            <td>${e.hSortie || ''}</td>
-                            <td>${e.transporteur || ''}</td>
-                            <td>${e.numeroBL || ''}</td>
-                            <td>${e.matricule || ''}</td>
-                            <td>${e.tb ?? ''}</td>
-                            <td>${e.tare ?? ''}</td>
-                            <td>${tnH}</td>
-                            <td>${e.numeroContenaire || ''}</td>
-                            <td>${e.poste ?? ''}</td>
-                            <td>${e.lieuDeDechargement || ''}</td>
-                            <td>${e.observation || ''}</td>
-                            <td class="table-actions">
-                                <button onclick='editRow(${JSON.stringify(e)})'><i class="fas fa-edit"></i> Modifier</button>
-                                <button class="delete-btn" onclick='deleteRow("${e.id}")'><i class="fas fa-trash-alt"></i> Supprimer</button>
-                            </td>
-                        `;
-                    tbody.appendChild(tr);
-                });
+                fullData = Array.isArray(data) ? data.sort((a,b)=>new Date(b.date)-new Date(a.date)) : [];
+                tableData = [...fullData];
+                renderTable();
             })
             .catch(error => {
                 console.error("Erreur lors du chargement des données:", error);
@@ -963,15 +1025,15 @@
             date: document.getElementById('date').value,
             hEntree: document.getElementById('hEntree').value,
             hSortie: document.getElementById('hSortie').value,
-            transporteur: document.getElementById('transporteur').value,
+            transporteur: document.getElementById('transporteurSelect').value,
             numeroBL: document.getElementById('numeroBL').value,
             matricule: document.getElementById('matricule').value,
             tb: tbValue,
             tare: tareValue,
             tnH: parseFloat(tnHValue), // Include TNH in the data sent
             numeroContenaire: document.getElementById('numeroContenaire').value,
-            poste: parseInt(document.getElementById('poste').value),
-            lieuDeDechargement: document.getElementById('lieuDeDechargement').value,
+            poste: parseInt(document.getElementById('posteSelect').value),
+            lieuDeDechargement: document.getElementById('lieuSelect').value,
             observation: document.getElementById('observation').value
         };
 
@@ -1016,14 +1078,14 @@
         document.getElementById('date').value = item.date || '';
         document.getElementById('hEntree').value = item.hEntree || '';
         document.getElementById('hSortie').value = item.hSortie || '';
-        document.getElementById('transporteur').value = item.transporteur || '';
+        document.getElementById('transporteurSelect').value = item.transporteur || '';
         document.getElementById('numeroBL').value = item.numeroBL || '';
         document.getElementById('matricule').value = item.matricule || '';
         document.getElementById('tb').value = item.tb ?? '';
         document.getElementById('tare').value = item.tare ?? '';
         document.getElementById('numeroContenaire').value = item.numeroContenaire || '';
-        document.getElementById('poste').value = item.poste ?? '';
-        document.getElementById('lieuDeDechargement').value = item.lieuDeDechargement || '';
+        document.getElementById('posteSelect').value = item.poste ?? '';
+        document.getElementById('lieuSelect').value = item.lieuDeDechargement || '';
         document.getElementById('observation').value = item.observation || '';
 
         // Change form title and button for edit mode
@@ -1093,6 +1155,7 @@
         });
 
         // Initial load of table data when the DOM is ready
+        loadRefs();   // charge les listes déroulantes
         loadTable();
     });
 </script>
